``` feat(oss): 支持从用户主目录加载环境变量配置
移除冗余的 dotenv 加载逻辑，统一在入口文件中处理多源配置加载。
新增对 ~/.pdf2all-mcp/.env 文件的支持，提升配置灵活性。

fix(spawn): 使用 PYTHON_PATH 环境变量指定 Python 解释器路径

允许通过环境变量自定义 Python 命令路径，默认回退到系统 `python`。
优化 Python 进程启动参数，确保编码与缓冲区设置正确。

docs(readme): 更新 README 并完善多平台配置说明

增加详细的快速开始指引、功能介绍及多种 MCP 客户端配置示例。
补充本地配置文件使用方式和依赖要求说明。

build(package): 版本号更新至 v1.1.0 并优化描述信息

更新包版本至 1.1.0，增强 npm 包描述信息以体现项目中文名称。
删除无用的 .env 和 mcp-config.json 默认模板文件。
```

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pdf2all-mcp",
-  "version": "1.0.0",
-  "description": "A comprehensive MCP server for converting PDF to Excel (OCR supported), Word, PPT, and Images.",
+  "version": "1.1.0",
+  "description": "pdf2all全能转换器 - A comprehensive MCP server for converting PDF to Excel (OCR supported), Word, PPT, and Images.",
   "main": "dist/src/index.js",
   "bin": {
     "pdf2all-mcp": "./dist/src/index.js"
