--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -3,8 +3,8 @@ pdfplumber>=0.11.0
 pandas>=2.0.0
 PyMuPDF>=1.19.0
 python-pptx>=0.6.23
-PyPDF2>=3.0.0
+pypdf>=3.0.0
 openpyxl>=3.1.0
 Pillow>=10.0.0
-rapidocr>=3.0.0
+rapidocr-onnxruntime>=1.3.0
 onnxruntime>=1.16.0
