fix(docker-publish): 更新镜像名称以使用DOCKER_USERNAME密钥
修改GitHub工作流配置, 使用secrets中的DOCKER_USERNAME来构建镜像名称,
确保与docker登录用户名保持一致, 避免因仓库路径不匹配导致的发布问题。

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -11,8 +11,8 @@ on:
 env:
   # Use docker.io for Docker Hub if empty
   REGISTRY: docker.io
-  # github.repository as <account>/<repo>
-  IMAGE_NAME: ${{ github.repository }}
+  # Use the username from secrets to ensure it matches the login
+  IMAGE_NAME: ${{ secrets.DOCKER_USERNAME }}/pdf2all
 
 
 jobs:
