``` chore(gitignore): 添加agents相关目录到忽略文件
新增 .agent/、.claude/、.mcp/ 和 .sequential-thinking/ 目录到
.gitignore 文件中，避免这些临时或缓存目录被提交到版本控制。

fix(docker-compose): 更新pdf2all服务的Docker镜像地址

将pdf2all服务配置中的Docker镜像地址从yourusername修改为xjbear，
确保服务能够正确拉取最新的镜像。
```

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   pdf2all:
     # 方式一：使用 Docker 镜像 (推荐)
-    # image: yourusername/pdf2all-mcp:latest
+    # image: xjbear/pdf2all-mcp:latest
     
     # 方式二：从源码构建 (本地开发或私有部署)
     build: .
